# mm_algo

./: main.py  pyproject.toml
adapters/: base.py  hyperliquid.py  pacifica.py
backtester/: backtester.py
config/: config.yaml  config_pacifica.yaml
core/: fee_engine.py  quote_engine.py  risk_manager.py  signal_engine.py
tests/: test_backtester.py  test_fee_engine.py  test_pacifica_adapter.py  test_quote_engine.py  test_risk_manager.py  test_signal_engine.py
