[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MM_algo"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["solders", "base58", "websockets", "aiohttp", "numpy", "pyyaml"]

[tool.setuptools.package-dir]
"MM_algo" = "."

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
